--- a/app/components/dc-dashboard/template.hbs
+++ b/app/components/dc-dashboard/template.hbs
@@ -5,11 +5,11 @@
         <div class="half-screen panel-body" >
         <h4 class="text-center">Hourly Locations</h4>
           {{dc-dashboard/pie-chart
-            dimension=companyDim
-            colors=colors
+            dimension=belongsToDim
             id='piechart'
           }}
         </div>
+        <span>* Locations where both companies are present</span>
       </div>
       <div class="buttons-panel chart-panel panel panel-default col-md-12">
         {{!-- <h4 class="text-center">{{cityName}} {{code}} Pricing Distribution</h4> --}}
